# tidy-logger

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: workflow_publish_to_pypi.yml  workflow_push_and_pull_request.yml
src/: formatters.py  tidy_logger.py
src/tidy_logger/: __init__.py  formatters.py  tidy_logger.py
tests/: test_tidy_logger.py
